<resources>
    <string name="app_name">圈子帮帮忙</string>
    <string name="tab_title_home">首页</string>
    <string name="tab_title_around">周边</string>
    <string name="tab_title_me">我的</string>
    <string name="tab_title_find">发现</string>
    <string name="wait_dialog_title">加载中，请稍后...</string>
    <string name="error_please_check_network">网络无法连接，请检查网络！</string>
    <string name="error_timeout">请求超时</string>
    <string name="error_not_found_server">无法连接服务器</string>
    <string name="error_url_error">URL错误！</string>
    <string name="error_not_found_cache">找不到缓存</string>
    <string name="error_system_unsupport_method">不支持该请求！</string>
    <string name="error_parse_data_error">数据转换错误</string>
    <string name="error_unknow">未知错误</string>
    <string name="titleBar_search_hint">请输入想要搜索的内容</string>
    <string name="around">圈内人</string>
    <string name="around_all">全部</string>
    <string name="around_supplier_list_all">全部</string>
    <string name="around_supplier_list_sort">距离排序</string>
    <string name="around_supplier_list_activity">活跃度</string>
    <string name="around_toolbar_action_edit">编辑</string>
    <string name="detail_sure_anytime">随时退</string>
    <string name="detail_sure_overdue">过期退</string>
    <string name="detail_sure_sevenday">七天退</string>
    <string name="detail_merchant_info">商家信息</string>
    <string name="detail_desc_title_currentOrder">本单详情</string>
    <string name="detail_desc_title_tips">温馨提示</string>
    <string name="detail_desc_title_recommend">看了又看</string>
    <string name="detail_desc_check_detail">查看图文详情</string>
    <string name="detail_bottom_buy">立即购买</string>
    <string name="detail_bottom_retail_price">门市价</string>
    <string name="detail_bought">已售</string>
    <string name="me_login_balance">账户余额:</string>
    <string name="me_nologin_not_login">您还没有登录哦</string>
    <string name="me_nologin_login">立即登录</string>
    <string name="me_user_coupons">优惠券</string>
    <string name="me_user_cart">购物车</string>
    <string name="me_user_favorite">收藏</string>
    <string name="me_user_history">最近浏览</string>
    <string name="me_item_unpaid_order">待付款订单</string>
    <string name="me_item_paid_order">已付款订单</string>
    <string name="me_item_lottery_order">抽奖单</string>
    <string name="me_item_treasure_order">夺宝单</string>
    <string name="me_item_unpaid_uncomment">未评价</string>
    <string name="me_item_bankcard">我的银行卡</string>
    <string name="me_item_bankcard_go_complete">去完善</string>
    <string name="me_item_recommend">每日推荐</string>
    <string name="me_item_coupons">抵用券</string>
    <string name="me_item_setting">设置</string>
    <string name="login_titleBar_login">登录</string>
    <string name="login_titleBar_register">注册</string>
    <string name="login_bottom_use_third_account">使用第三方账号登陆</string>
    <string name="login_select_quick_login">快速登录</string>
    <string name="login_select_account_login">账号登录</string>
    <string name="login_input_username_hint">请输入手机号/邮箱/用户名</string>
    <string name="login_input_phoneNumber_hint">请输入手机号</string>
    <string name="login_input_password_hint">请输入密码</string>
    <string name="login_input_check_code_hint">请输入验证码</string>
    <string name="login_input_btn_get_code">获取验证码</string>
    <string name="login_account_forget_password">忘记密码</string>
    <string name="login_input_repassword_hint">请确认密码</string>
    <string name="register_tips">登录密码为6位以上数字和字母的组合，区分大小写</string>
    <string name="reSend">重新发送</string>
    <string name="sms_code_send_success">验证码已成功发送至您的手机，请注意查收</string>
    <string name="phone_number_incorrect">手机号输入不正确</string>
    <string name="sms_code_send_failure">验证码发送失败</string>
    <string name="quick_login_input_incorrect">您的手机号或验证码输入有误</string>
    <string name="my_collection">我的收藏</string>
    <string name="collect_have_no_collection">您还没有收藏任何商品</string>
    <string name="collect_titleBar_manager">管理</string>
    <string name="register_password_not_consistant">两次输入的密码不一致</string>
    <string name="register_success">注册成功</string>
    <string name="register_failure">注册失败</string>
    <string name="register_input_incorrect">您输入的信息不正确，请检查你的输入</string>
    <string name="collect_failed">收藏失败</string>
    <string name="collect_success">收藏成功</string>
    <string name="uncollect_success">取消收藏</string>
    <string name="more_item_only_wifi_show_picture">仅在WIFI下显示图片</string>
    <string name="more_item_message_notice">消息提醒</string>
    <string name="more_item_share_settings">分享设置</string>
    <string name="more_item_clear_cache">清除缓存</string>
    <string name="more_item_good_comment">赏个好评</string>
    <string name="more_item_feedback">意见反馈</string>
    <string name="more_item_contact_kefu">联系客服</string>
    <string name="more_item_kefu_number">18186532328</string>
    <string name="more_item_current_version">当前版本 V1.0</string>
    <string name="more_item_check_update">检查更新</string>
    <string name="more_item_about">关于</string>
    <string name="more_item_default_cache_size">0.00KB</string>
    <string name="more_item_kefu_hours">(8:00-22:00)</string>
    <string name="clear_cache_success">清除缓存成功</string>
    <string name="open_app_market_failed">打开应用商店失败</string>
    <string name="current_version">当前版本 V</string>
    <string name="version_unknown">版本未知</string>
    <string name="user_center">个人中心</string>
    <string name="login_input_empty">用户名或密码为空</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="user_item_title_username">用户名</string>
    <string name="user_item_right_modify">修改</string>
    <string name="user_item_title_nickname">昵称</string>
    <string name="user_item_right_edit">编辑</string>
    <string name="user_item_title_bindPhone">绑定手机号</string>
    <string name="user_item_right_unbind">未绑定</string>
    <string name="user_item_title_pay_password">支付密码</string>
    <string name="user_item_right_unset">未设置</string>
    <string name="user_item_title_login_password">登录密码</string>
    <string name="user_item_title_avatar">头像</string>
    <string name="man">男</string>
    <string name="user_item_title_gender">性别</string>
    <string name="user_item_title_birthday">生日</string>
    <string name="user_item_right_select">请选择</string>
    <string name="user_item_title_address">收货地址</string>
    <string name="user_item_title_qr">我的二维码</string>
    <string name="user_exit_login">退出登录</string>
    <string name="user_item_title_member_level">会员等级</string>
    <string name="auth_cancel">取消授权</string>
    <string name="auth_error">授权失败</string>
    <string name="auth_success">授权成功</string>
    <string name="cart">购物车</string>
    <string name="cart_empty">您的购物车为空</string>
    <string name="history_empty">您还没有浏览记录</string>
    <string name="paid_order_empty">您没有已付款订单</string>
    <string name="unpaid_order_empty">您没有未付款订单</string>
    <string name="lottery_order_empty">您还没有抽奖单</string>
    <string name="treasure_order_empty">夺宝单为空</string>
    <string name="coupons_empty">您还没有抵用券</string>
    <string name="current_city">当前城市</string>
    <string name="input_city_to_search">请输入要查找的城市</string>
    <string name="not_find_city">抱歉，暂时没有找到相关城市</string>
    <string name="location_failure">定位失败，请重试</string>
    <string name="location_ing">正在定位...</string>
    <string name="recent_city">最近浏览城市</string>
    <string name="hot_city">热门城市</string>
    <string name="location_city">定位城市</string>
    <string name="no_message">您还没有收到消息哦</string>
    <string name="message">消息</string>
    <string name="plugin_not_installed">监测到本机尚未安装支付插件,无法进行支付,请先安装插件(无流量消耗)</string>
    <string name="plugin_not_latest">监测到本机的支付插件不是最新版,最好进行更新,请先更新插件(无流量消耗)</string>
    <string name="pay_result_unknow">支付结果未知,请稍后手动查询</string>
    <string name="pay_success">支付成功</string>
    <string name="get_order_success">获取订单成功!请等待跳转到支付页面~</string>
    <string name="check_no_plugin">监测到你尚未安装支付插件,无法进行支付,请先安装插件(已打包在本地,无流量消耗),安装结束后重新支付</string>
    <string name="pay_interrupt">支付中断</string>
    <string name="onboarding_pre_btn_desc">上一页</string>
    <string name="onboarding_finish_btn_desc">完成</string>
    <string name="onboarding_section_1">在这里，你可以获取许多高质量的安卓技术文章</string>
    <string name="onboarding_intro_1">包含了Gradle, Component, JNI等方向的文章，等等</string>
    <string name="onboarding_section_2">我们每天都会更新文章 </string>
    <string name="onboarding_intro_2">让您能紧跟安卓技术的潮流前线</string>
    <string name="onboarding_section_3">一个新的世界在等待着你</string>
    <string name="onboarding_intro_3">探索未知，就在此刻</string>
    <string name="login_account_hint_text">请输入您的手机号</string>
    <string name="login_code_hint_text">请输入您的验证码</string>
    <string name="login_password_hint_text">请输入您的密码</string>
    <string name="login_re_password_hint_text">请再次输入您的密码</string>
    <string name="login_btn_login">登陆</string>
    <string name="login_btn_sign_up">注册</string>
    <string name="link_to_sign_up">还没有一个账号吗？新建一个吧</string>
    <string name="link_to_login">已经拥有账号了？请登陆</string>
    <string name="login_account_desc">用户名</string>
    <string name="login_password_desc">密码</string>
    <string name="login_get_code">获取验证码</string>
    <string name="login_error">账号密码错误</string>
    <string name="register_error">已经存在此用户名</string>
    <string name="input_error">你输入的有非法字符</string>
    <string name="repassword_not_match">密码不匹配，请确认您的密码</string>
    <string name="nav_log_out">注销</string>
    <string name="nav_about">关于</string>
    <string name="nav_switch_theme">日/夜间模式</string>
    <string name="nav_settings">设置</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_articles">文章</string>
    <string name="nav_categories">类别</string>
    <string name="empty_text">这里空空的</string>
    <string name="item_menu_search">查询</string>
    <string name="timeline_label">时间轴</string>
    <string name="timeline_articles">文章</string>
    <string name="timeline_favorites">收藏</string>
    <string name="timeline_read_later">稍后再读</string>
    <string name="detail_label">文章详情页</string>
    <string name="detail_collect_article">收藏文章</string>
    <string name="detail_uncollect_article">取消收藏文章</string>
    <string name="detail_add_to_read_later">添加到稍后再读</string>
    <string name="detail_remove_from_read_later">从稍后再读中移除</string>
    <string name="detail_copy_the_link">复制链接</string>
    <string name="detail_share">分享</string>
    <string name="detail_share_to">分享到</string>
    <string name="detail_open_in_system_browser">在系统浏览器中打开</string>
    <string name="detail_copied_to_clipboard">复制到剪贴板</string>
    <string name="detail_no_browser_found">没有找到浏览器</string>
    <string name="detail_no_activity_found">没有找到应用</string>
    <string name="detail_collect_article_error">收藏文章失败</string>
    <string name="detail_collect_article_success">成功</string>
    <string name="detail_uncollect_article_error">取消收藏文章失败</string>
    <string name="detail_uncollect_article_success">成功</string>
    <string name="categories_label">所有类别</string>
    <string name="category_label">类别</string>
    <string name="search_label">搜索</string>
    <string name="search_tint">搜索文章</string>
    <string name="about_settings">设置</string>
    <string name="about_navigation_bar_tint">导航栏变色</string>
    <string name="about_navigation_bar_tint_desc">导航栏着色</string>
    <string name="about_navigation_bar_restart_msg">在重启应用后，设置才会生效</string>
    <string name="about_version">版本</string>
    <string name="about_rate">评分</string>
    <string name="about_rate_desc">如果您喜欢这个APP，请给我好评</string>
    <string name="about_licenses">证书</string>
    <string name="about_thanks">致谢</string>
    <string name="about_lizhaotailang">Li Zhao Tai Lang</string>
    <string name="about_lizhaotailang_desc">十分感谢他给予的帮助</string>
    <string name="about_lizhaotailang_link">https://github.com/TonnyL</string>
    <string name="about_hongyang">Hong Yang</string>
    <string name="about_hongyang_desc">API提供者</string>
    <string name="about_hongyang_link">https://github.com/hongyangAndroid</string>
</resources>