<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="10dp">

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
         />


    <android.support.design.widget.TextInputLayout
        style="@style/MyEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin_half"
        android:layout_marginTop="@dimen/activity_margin_half">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_account_hint_text"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_margin_half"
        android:layout_marginTop="@dimen/activity_margin_half">
        <android.support.design.widget.TextInputLayout
            android:layout_weight="2"
            style="@style/MyEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_margin_half"
                android:layout_marginTop="@dimen/activity_margin_half"
                android:hint="@string/login_code_hint_text"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatButton
            android:layout_weight="1"
            android:id="@+id/btn_get_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:elevation="@dimen/activity_margin_half"
            android:padding="12dp"
            android:text="@string/login_get_code"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/MyEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin_half"
        android:layout_marginTop="@dimen/activity_margin_half">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_hint_text"
            android:inputType="textPassword"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        style="@style/MyEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin_half"
        android:layout_marginTop="@dimen/activity_margin_half">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_re_password_hint_text"
            android:inputType="textPassword"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="@dimen/activity_margin_half"
        android:padding="12dp"
        android:text="@string/login_btn_sign_up"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/text_link_login"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/link_to_login"
        android:textColor="@android:color/white" />

</LinearLayout>